sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1: error: not enough arguments for method bubbleSort: (list: Array[Char])Unit.
Unspecified value parameter list.
		bubbleSort();
                          ^AlgBubbleSort1:6: error: ambiguous reference to overloaded definition,
both method to in class RichInt of type (end: Int, step: Int)scala.collection.immutable.Range.Inclusive
and  method to in class RichInt of type (end: Int)scala.collection.immutable.Range.Inclusive
match expected type ?
    for (i<-1.to getNombreValeurs(temp)-1){
              ^AlgBubbleSort1:6: error: value - is not a member of Array[Char]
    for (i<-1.to getNombreValeurs(temp)-1){
                                       ^AlgBubbleSort1:12: warning: enclosing method bubbleSort has result type Unit: return value discarded
  return temp
  ^