sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort(list:Array[Char] )  {
  var temp :Array[Char]=list
  var k: Int =0
  do{
    for (i<-1.to getNombreValeurs(temp)-1){
      if (plusPetit(temp(i+1),temp(i))){
        echange(temp(i),temp(i+1))
      }
    }
  }while(k!=0)
  return temp
}